:refactor: :sparkles: feat,refactor - polimento de codigo e metodos